...
        Switch(
            checked = roundUp,
            onCheckedChange = onCheckedChange,
            Modifier
                .fillMaxWidth()
                .wrapContentWidth(align = Alignment.End)
                .testTag("RoundUpSwitch")
        )
    }
}

/**
 * Calculates the tip based on the user input and format the tip amount
...
